Fix to public score computation code (paper results unaffected)

--- a/econ_evals/experiments/scheduling/compute_scores.ipynb
+++ b/econ_evals/experiments/scheduling/compute_scores.ipynb
@@ -92,9 +92,9 @@
     "\n",
     "        difficulty = short_log_subdirname.split(\"__\")[0]\n",
     "        seed = global_params[\"seed\"]\n",
-    "        num_attempts = global_params[\"num_attempts\"]\n",
+    "        final_attempt_num = max(df[\"attempt_num\"])\n",
     "\n",
-    "        final_attempt_df = df[df[\"attempt_num\"] == num_attempts - 1].reset_index(\n",
+    "        final_attempt_df = df[df[\"attempt_num\"] == final_attempt_num].reset_index(\n",
     "            drop=True\n",
     "        )\n",
     "\n",
@@ -133,6 +133,7 @@
     "                \"difficulty\": short_log_subdirname.split(\"__\")[0],\n",
     "            }\n",
     "        )\n",
+    "\n",
     "df_table = pd.DataFrame(table)"
    ]
   },
@@ -141,6 +142,28 @@
    "metadata": {},
    "source": [
     "# Calculate scheduling benchmark scores for each LLM and difficulty level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_table[[\"model\", \"difficulty\", \"final_num_blocking_pairs\", \"seed\"]].groupby(\n",
+    "    [\"model\", \"difficulty\", \"seed\"]\n",
+    ").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_table[[\"model\", \"difficulty\", \"final_score\", \"seed\"]].groupby(\n",
+    "    [\"model\", \"difficulty\", \"seed\"]\n",
+    ").mean() * 100"
    ]
   },
   {
@@ -172,6 +195,13 @@
     "    [\"model\", \"difficulty\"]\n",
     ")[\"solved\"].count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
