Add support for reasoning models, minor CLI improvements

--- a/econ_evals/experiments/efficiency_vs_equality/compute_scores.ipynb
+++ b/econ_evals/experiments/efficiency_vs_equality/compute_scores.ipynb
@@ -95,13 +95,19 @@
     ")\n",
     "\n",
     "efficiency_competency = (\n",
-    "    df_table[df_table[\"prompt_type\"] == \"efficiency\"]\n",
+    "    df_table[\n",
+    "        (df_table[\"prompt_type\"] == \"efficiency\")\n",
+    "        | (df_table[\"prompt_type\"] == \"efficiency_reasoning\")\n",
+    "    ]\n",
     "    .groupby(\"model\")[\"efficiency_competency\"]\n",
     "    .mean()\n",
     ")\n",
     "\n",
     "equality_competency = (\n",
-    "    df_table[df_table[\"prompt_type\"] == \"equality\"]\n",
+    "    df_table[\n",
+    "        (df_table[\"prompt_type\"] == \"equality\")\n",
+    "        | (df_table[\"prompt_type\"] == \"equality_reasoning\")\n",
+    "    ]\n",
     "    .groupby(\"model\")[\"equality_competency\"]\n",
     "    .mean()\n",
     ")\n",
@@ -189,7 +195,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litmus_df[litmus_df[\"prompt_type\"] == \"main\"].groupby(\"model\")[\"litmus_score\"].mean()"
+    "litmus_df[\n",
+    "    (litmus_df[\"prompt_type\"] == \"main\")\n",
+    "    | (litmus_df[\"prompt_type\"] == \"main_reasoning\")\n",
+    "].groupby(\"model\")[\"litmus_score\"].mean()"
    ]
   },
   {
@@ -202,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ-evals-paper-BpVbBBNZ",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -216,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
