--- a/econ_evals/experiments/collusiveness_vs_competitiveness/compute_scores.ipynb
+++ b/econ_evals/experiments/collusiveness_vs_competitiveness/compute_scores.ipynb
@@ -395,7 +395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ-evals-paper-BpVbBBNZ",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
