--- a/econ_evals/experiments/pricing/compute_scores.ipynb
+++ b/econ_evals/experiments/pricing/compute_scores.ipynb
@@ -190,6 +190,8 @@
     "                \"seed\": seed,\n",
     "                \"model\": model,\n",
     "                \"difficulty\": short_log_subdirname.split(\"__\")[1],\n",
+    "                \"exploration_rate\": len(market_df[\"prices\"].astype(str).unique())\n",
+    "                / len(market_df[\"prices\"]),\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -229,12 +231,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "(\n",
+    "    df_table[[\"model\", \"difficulty\", \"exploration_rate\"]]\n",
+    "    .groupby([\"model\", \"difficulty\"])\n",
+    "    .mean()\n",
+    "    * 100\n",
+    ").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ-evals-paper-BpVbBBNZ",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
