--- a/econ_evals/experiments/procurement/compute_scores.ipynb
+++ b/econ_evals/experiments/procurement/compute_scores.ipynb
@@ -54,16 +54,20 @@
     "for log_subdirname in log_subdirnames:\n",
     "    dirnames = log_subdirname_to_dirnames[log_subdirname]\n",
     "    for dirname in dirnames:\n",
-    "        df = pd.read_csv(\n",
-    "            get_base_dir_path()\n",
-    "            / \"experiments/procurement/logs/\"\n",
-    "            / f\"{log_subdirname}/{dirname}/logs.csv\"\n",
-    "        )\n",
-    "        global_params = pd.read_csv(\n",
-    "            get_base_dir_path()\n",
-    "            / \"experiments/procurement/logs/\"\n",
-    "            / f\"{log_subdirname}/{dirname}/global_params.csv\"\n",
-    "        ).to_dict(orient=\"records\")[0]\n",
+    "        try:\n",
+    "            df = pd.read_csv(\n",
+    "                get_base_dir_path()\n",
+    "                / \"experiments/procurement/logs/\"\n",
+    "                / f\"{log_subdirname}/{dirname}/logs.csv\"\n",
+    "            )\n",
+    "            global_params = pd.read_csv(\n",
+    "                get_base_dir_path()\n",
+    "                / \"experiments/procurement/logs/\"\n",
+    "                / f\"{log_subdirname}/{dirname}/global_params.csv\"\n",
+    "            ).to_dict(orient=\"records\")[0]\n",
+    "\n",
+    "        except FileNotFoundError:\n",
+    "            continue\n",
     "\n",
     "        model = global_params[\"model\"]\n",
     "\n",
@@ -89,6 +93,7 @@
     "                \"seed\": global_params[\"seed\"],\n",
     "                \"model\": model,\n",
     "                \"difficulty\": short_log_subdirname.split(\"__\")[0],\n",
+    "                \"exploration_rate\": len(plot_df[\"alloc\"].unique()) / len(plot_df),\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -123,6 +128,17 @@
    "outputs": [],
    "source": [
     "df_table[[\"model\", \"difficulty\", \"max_ratio\"]].groupby(\n",
+    "    [\"model\", \"difficulty\"]\n",
+    ").mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_table[[\"model\", \"difficulty\", \"exploration_rate\"]].groupby(\n",
     "    [\"model\", \"difficulty\"]\n",
     ").mean() * 100"
    ]
@@ -163,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ-evals-paper-BpVbBBNZ",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
