--- a/econ_evals/experiments/scheduling/compute_scores.ipynb
+++ b/econ_evals/experiments/scheduling/compute_scores.ipynb
@@ -131,6 +131,8 @@
     "                \"seed\": global_params[\"seed\"],\n",
     "                \"model\": global_params[\"model\"],\n",
     "                \"difficulty\": short_log_subdirname.split(\"__\")[0],\n",
+    "                \"exploration_rate\": len(df[\"matching\"].dropna().unique())\n",
+    "                / len(df[\"matching\"].unique()),\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -150,19 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_table[[\"model\", \"difficulty\", \"final_num_blocking_pairs\", \"seed\"]].groupby(\n",
-    "    [\"model\", \"difficulty\", \"seed\"]\n",
-    ").mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_table[[\"model\", \"difficulty\", \"final_score\", \"seed\"]].groupby(\n",
-    "    [\"model\", \"difficulty\", \"seed\"]\n",
+    "df_table[[\"model\", \"difficulty\", \"final_score\"]].groupby(\n",
+    "    [\"model\", \"difficulty\"]\n",
     ").mean() * 100"
    ]
   },
@@ -172,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_table[[\"model\", \"difficulty\", \"final_score\"]].groupby(\n",
+    "df_table[[\"model\", \"difficulty\", \"exploration_rate\"]].groupby(\n",
     "    [\"model\", \"difficulty\"]\n",
     ").mean() * 100"
    ]
@@ -213,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ-evals-paper-BpVbBBNZ",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
